# drocsid

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  README.md  package.json  release-please-config.json
.beads/: .migration-hint-ts  issues.jsonl
.claude/: settings.json
.github/workflows/: build-desktop.yml  deploy.yml  release-please.yml
admin/: index.html  package-lock.json  package.json  vite.config.ts
admin/src/: App.tsx  api.ts  style.css
admin/src/pages/: Dashboard.tsx  LiveKit.tsx  Logs.tsx  Voice.tsx
app/: .gitignore  electron-builder.yml  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
app/e2e/: auth.spec.ts  chat-scroll.spec.ts  settings.spec.ts
app/electron/: main.ts  pipewire.ts  preload.ts  tsconfig.json
app/electron-dist/: main.js  preload.js
app/src/: App.tsx  env.d.ts  index.css  main.tsx  sw.ts  types.ts
app/src-tauri/: Cargo.toml  PKGBUILD  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: audio.rs  lib.rs  main.rs
app/src-tauri/src/voice/: audio_io.rs  manager.rs  mod.rs  screen_capture.rs  suppressor.rs
app/src/api/: client.ts  gateway.ts  instance.ts
app/src/components/: ErrorBoundary.tsx
app/src/components/auth/: AuthPage.css  AuthPage.tsx  ForgotPasswordForm.tsx  InstancePicker.tsx  ResetPasswordForm.tsx
app/src/components/channel/: CreateChannelModal.css  CreateChannelModal.tsx
app/src/components/chat/: BookmarksPanel.tsx  ChatArea.css  ChatArea.tsx  EmojiPicker.css  EmojiPicker.tsx  GifPicker.css  GifPicker.tsx  LinkCollectionPanel.tsx  LinkPreview.tsx  Markdown.css  Markdown.tsx  MentionDropdown.tsx  MessageInput.css  PollCard.css  (+15 more)
app/src/hooks/: useClickOutside.ts  useDocumentTitle.ts  useEscapeKey.ts  useFaviconBadge.ts  useInfiniteScroll.ts  usePwaUpdate.ts  useTrayBadge.ts
app/src/stores/: authStore.ts  presenceStore.ts  serverStore.ts  themeStore.ts  uiStore.ts  updateStore.ts  voiceStore.ts
app/src/test/: setup.ts
app/src/types/: electron.d.ts
app/src/utils/: audioDevices.ts  browserNotifications.ts  formatting.ts  notificationSounds.ts  pushSubscription.ts  soundboardAudio.ts
config/: default.toml
deploy/: .env.example  deploy.sh  drocsid-server.service  setup.sh
deploy/nginx/: drocsid.conf
docker/: docker-compose.prod.yml  docker-compose.yml  livekit.yaml
docs/: bots.md
hooks/: commit-msg
migrations/: 0001_initial.sql  0002_rich_messages.sql  0003_dms_threads_search.sql  0004_phase6.sql  0005_user_settings.sql  0006_registration_codes.sql  0007_dm_close.sql  0008_account_deletion.sql  0009_read_states.sql  0010_notification_preferences.sql  0011_password_reset_tokens.sql  0012_unique_username.sql  0013_server_banner.sql  0014_server_banner_position.sql  0015_soundboard.sql  0016_custom_themes.sql  0017_message_bookmarks.sql  0018_user_timezone.sql  0019_scheduled_messages.sql  0020_channel_links.sql  0021_polls.sql  0022_push_subscriptions.sql  0023_add_indexes.sql
server/: Cargo.toml
server/src/: config.rs  error.rs  main.rs  state.rs
server/src/api/: admin.rs  admin_dashboard.rs  auth.rs  bans.rs  bookmarks.rs  bug_reports.rs  channels.rs  dms.rs  gif.rs  invites.rs  links.rs  mod.rs  polls.rs  push.rs  relationships.rs  roles.rs  scheduled.rs  search.rs  servers.rs  soundboard.rs  themes.rs  unfurl.rs  voice.rs  webhooks.rs
server/src/db/: mod.rs  queries.rs
server/src/gateway/: connection.rs  mod.rs
server/src/services/: auth.rs  email.rs  log_broadcast.rs  mod.rs  permissions.rs  push.rs  scheduler.rs  uploads.rs
server/src/types/: entities.rs  events.rs  mod.rs  permissions.rs
(+56 files in other folders)
