[package]
name = "drocsid"
version = "0.1.0"
description = "Drocsid Desktop App"
authors = []
edition = "2021"

[lib]
name = "drocsid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
