[package]
name = "drocsid"
version = "0.1.0"
description = "Drocsid Desktop App"
authors = []
edition = "2021"

[lib]
name = "drocsid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
livekit = "0.7"
cpal = "0.17"
rtrb = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
