[package]
name = "drocsid"
version = "0.3.0" # x-release-please-version
description = "Drocsid Desktop App"
authors = []
edition = "2021"

[lib]
name = "drocsid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
livekit = { version = "0.7.32", features = ["native-tls"] }
cpal = "0.17"
rtrb = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
log = "0.4"
simplelog = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
